--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   stacked: ^3.4.3
   http: ^1.2.0
+  stacked_services: ^1.5.0
 
 dev_dependencies:
   flutter_test:
